force-app/main/default/objects/Master_Package_Rate__c/Master_Package_Rate__c.object-meta.xml
<CustomObject>
    <description>Package Rate/Effective Rate</description>
    <label>Master Package Rate</label>
    <nameField>
        <label>Master Package Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Package Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>