force-app/main/default/objects/Master_Package_Rate__c/fields/max_tenure__c.field-meta.xml
<CustomField>
    <fullName>max_tenure__c</fullName>
    <label>max tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>