force-app/main/default/objects/Master_Package_Rate__c/fields/package_id__c.field-meta.xml
<CustomField>
    <fullName>package_id__c</fullName>
    <label>package id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>