force-app/main/default/objects/Master_Package_Rate__c/fields/product_id__c.field-meta.xml
<CustomField>
    <fullName>product_id__c</fullName>
    <label>product id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>