force-app/main/default/objects/Master_Package_Rate__c/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <label>rate</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>